--- a/googleClone.html
+++ b/googleClone.html
@@ -37,7 +37,7 @@
 
         <div class="Button">
                 <button>Search</button>
-                <button>I Feel Lucky</button>
+                <button>I'm Feeling Lucky</button>
         </div>
         <div class="message"></div>
             <div class="messageText">
